--- a/app/views/messages/index.html.haml
+++ b/app/views/messages/index.html.haml
@@ -1,1 +1,41 @@
-\!!!
+.Flash
+  フラッシュがあれば表示
+.Container
+  .Side
+    .Side-header
+      .Side-header__name
+        ユーザーの名前
+      %span.Side-header__new        
+      = link_to root_path do
+        = fa_icon 'edit'
+      %span.Side-header__edit
+      = link_to root_path do
+        = fa_icon 'cog'
+    .Side-groups
+      = link_to root_path do
+        %ul
+          %li.Side-groups__name
+            グループ名
+          %li.Side-groups__message
+            メッセージ
+      
+       
+  .Main
+    .Main-header
+      .Main-header__name
+        group.name
+      = link_to "Edit", root_path
+      .Main-header__menmbers
+        Members
+    .Main-messages
+      .Main-messages__name
+        name
+      .Main-messages__time
+        time
+      .Main-messages__text
+        text
+    %form.Main-form
+      %input.Main-form__message
+      .Main-form__image
+      = fa_icon 'image'
+      %input{type: "submit", value: 'Send'}
