--- a/app/views/messages/_index.html.haml
+++ b/app/views/messages/_index.html.haml
@@ -3,11 +3,11 @@
 .side
   .side-header
     .side-header__name
-      test-name
+      = current_user.name
     .side-header__icons
       = link_to root_path do
         = fa_icon 'edit'
-      = link_to root_path do
+      = link_to edit_user_path(current_user) do
         = fa_icon 'cog'
   %ul.side-groups
     %li.side-groups__group
