--- a/app/assets/stylesheets/_index.scss
+++ b/app/assets/stylesheets/_index.scss
@@ -5,9 +5,14 @@
 .flash {
   width: 100vw;
   height: 25px;
-  background: $color-flash-and-btn;
   color: $color-white;
   text-align: center;
+  &__alert {
+    background: #F35500;
+  }
+  &__notice {
+    background: $color-flash-and-btn;
+  }
 }
 
 .side {
