--- a/app/views/messages/_side.html.haml
+++ b/app/views/messages/_side.html.haml
@@ -3,7 +3,7 @@
     .side-header__name
       = current_user.name
     .side-header__icons
-      = link_to root_path do
+      = link_to new_group_path do
         = fa_icon 'edit'
       = link_to edit_user_path(current_user) do
         = fa_icon 'cog'
