--- a/app/assets/stylesheets/_chatspace.scss
+++ b/app/assets/stylesheets/_chatspace.scss
@@ -74,7 +74,6 @@
   }
 }
 
-
 .main-form {
   width: 100%;
   height: 90px;
@@ -98,7 +97,7 @@
       font-size: 1.3em;
       color: black;
     }
-    input {
+    &--default {
       display: none;
     }
   }
