--- a/app/views/messages/index.html.haml
+++ b/app/views/messages/index.html.haml
@@ -12,3 +12,10 @@
         - @group.group_users.each do |group_user|
           %li= group_user.user.name
     = render @messages
+    = form_for [@group, @message] do |f|
+      .main-form
+        = f.text_field :body, placeholder: "type a message", class: "main-form__message"
+        = f.label :image, class: "main-form__image" do
+          = fa_icon "image"
+          = f.file_field :image, class: "main-form__image--default"
+        = f.submit 'Send', class: "main-form__submit"
