--- a/app/views/messages/_side.html.haml
+++ b/app/views/messages/_side.html.haml
@@ -14,4 +14,4 @@
           %p.side-groups__group-name
             = group.name
           %p.side-groups__group-message
-            まだメッセージはありません。
+            = group.show_last_message
