--- a/app/assets/stylesheets/_chatspace.scss
+++ b/app/assets/stylesheets/_chatspace.scss
@@ -1,9 +1,15 @@
+.wrapper {
+  height: 100%;
+}
+
 .main {
   float: left;
   width: calc(100vw - 300px);
   height: 100vh;
-  background: #fafafa;
+  margin-left: 300px;
   position: relative;
+  overflow: auto;
+  background: #fafafa;
 }
 
 .main-header {
@@ -12,6 +18,7 @@
   height: 100px;
   padding: 0 40px;
   border-bottom: solid 1px #eeeeee;
+  position: fixed;
   &__top {
     &-name {
       float: left;
@@ -49,14 +56,18 @@
 }
 
 .main-messages {
-  padding: 0 40px;
+  padding: 46px 40px;
   width: 100%;
+  height: 100%;
+  margin-top: 100px;
+  margin-bottom: 90px;
 }
 
 .message {
+  padding-bottom: 46px;
   &__top {
     display: flex;
-    margin: 46px 0 10px;
+    margin: 0 0 10px;
     &-name {
       font-size: 16px;
       font-weight: bold;
@@ -72,13 +83,16 @@
     font-size: 14px;
     color: $color-gray;
   }
+  &:last-child {
+    padding-bottom: 130px;
+  }
 }
 
 .main-form {
-  width: 100%;
+  width: calc(100vw - 300px);
   height: 90px;
   background: #dddddd;
-  position: absolute;
+  position: fixed;
   bottom: 0;
   display: flex;
   padding: 20px 40px;
