--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -12,14 +12,14 @@
   box-sizing: border-box;
 }
 
+body {
+  height: 100%;
+}
+
 li {
   list-style: none;
 }
 
 a {
   text-decoration: none;
-}
-
-.wrapper {
-  overflow: hidden;
 }
