--- a/app/assets/stylesheets/_chatspace.scss
+++ b/app/assets/stylesheets/_chatspace.scss
@@ -20,21 +20,21 @@
   border-bottom: solid 1px #eeeeee;
   position: fixed;
   &__top {
+    width: 100%;
+    display: flex;
     &-name {
-      float: left;
       color: #333333;
       font-size: 20px;
       padding: 35px 0 15px;
     }
     &-edit {
-      float: right;
       font-size: 16px;
       border: solid 1px $color-flash-and-btn;
       height: 40px;
       line-height: 40px;
       margin-top: 28px;
       position: absolute;
-      right: 40px;
+      right: 340px;
       a {
         color: $color-flash-and-btn;
         display: block;
