--- a/app/assets/stylesheets/_flash.scss
+++ b/app/assets/stylesheets/_flash.scss
@@ -3,6 +3,8 @@
   height: 25px;
   color: $color-white;
   text-align: center;
+  position: fixed;
+  z-index: 1;
   &__alert {
     background: #F35500;
   }
