--- a/app/assets/stylesheets/_chatspace.scss
+++ b/app/assets/stylesheets/_chatspace.scss
@@ -58,9 +58,10 @@
 .main-messages {
   padding: 46px 40px;
   width: 100%;
-  height: 100%;
+  height: calc(100vh - 190px);
   margin-top: 100px;
   margin-bottom: 90px;
+  overflow: scroll;
 }
 
 .message {
@@ -84,7 +85,7 @@
     color: $color-gray;
   }
   &:last-child {
-    padding-bottom: 130px;
+    padding-bottom: 30px;
   }
 }
 
