--- a/app/assets/stylesheets/_side.scss
+++ b/app/assets/stylesheets/_side.scss
@@ -3,7 +3,6 @@
   width: 300px;
   height: 100%;
   position: fixed;
-  overflow: auto;
   background: #2f3e51;
   div, a {
     color: $color-white;
@@ -26,7 +25,9 @@
   }
   &-groups {
     height: 100%;
-    padding: 120px 20px 20px 20px;
+    margin-top: 100px;
+    padding: 20px 20px 20px 20px;
+    overflow: scroll;
     &__group-name {
       font-size: 15px;
       margin-bottom: 5px;
