--- a/app/views/groups/_form.html.haml
+++ b/app/views/groups/_form.html.haml
@@ -19,7 +19,8 @@
       - @group.users.each do |user|
         .chat-group-user.clearfix.js-chat-member#chat-group-user-8
           %input{type: 'hidden', name: 'group[user_ids][]', value: user.id}
-          %p.chat-group-user__name= user.name
+          %p.chat-group-user__name
+            = user.name
           - if user != current_user
             .user-search-remove.chat-group-user__btn.chat-group-user__btn--remove.js-remove-btn 削除
   .chat-group-form__field.clearfix
